yaml/nest-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: nest-api
  name: nest-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nest-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ./docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/gloss-api-backend_default: "true"
        io.kompose.service: nest-api
    spec:
      containers:
        - env:
            - name: APPLICATION
              valueFrom:
                configMapKeyRef:
                  key: APPLICATION
                  name: docker-env
            - name: BCRYPT_SALT_OR_ROUNDS
              valueFrom:
                configMapKeyRef:
                  key: BCRYPT_SALT_OR_ROUNDS
                  name: docker-env
            - name: CORS_ENABLE
              valueFrom:
                configMapKeyRef:
                  key: CORS_ENABLE
                  name: docker-env
            - name: GRAPHQL_DEBUG
              valueFrom:
                configMapKeyRef:
                  key: GRAPHQL_DEBUG
                  name: docker-env
            - name: GRAPHQL_SCHEMA_DEST
              valueFrom:
                configMapKeyRef:
                  key: GRAPHQL_SCHEMA_DEST
                  name: docker-env
            - name: JWT_EXPIRES_IN
              valueFrom:
                configMapKeyRef:
                  key: JWT_EXPIRES_IN
                  name: docker-env
            - name: JWT_REFRESH_IN
              valueFrom:
                configMapKeyRef:
                  key: JWT_REFRESH_IN
                  name: docker-env
            - name: JWT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: JWT_SECRET
                  name: docker-env
            - name: PLAYGROUND_ENABLE
              valueFrom:
                configMapKeyRef:
                  key: PLAYGROUND_ENABLE
                  name: docker-env
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  key: PORT
                  name: docker-env
            - name: POSTGRESQL_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTGRESQL_PASSWORD
                  name: docker-env
            - name: POSTGRESQL_URL
              valueFrom:
                configMapKeyRef:
                  key: POSTGRESQL_URL
                  name: docker-env
            - name: POSTGRESQL_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRESQL_USER
                  name: docker-env
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_DB
                  name: docker-env
            - name: PYTHON_HOST
              valueFrom:
                configMapKeyRef:
                  key: PYTHON_HOST
                  name: docker-env
            - name: PYTHON_POST_MSG
              valueFrom:
                configMapKeyRef:
                  key: PYTHON_POST_MSG
                  name: docker-env
            - name: PYTHON_RETURN_MSG
              valueFrom:
                configMapKeyRef:
                  key: PYTHON_RETURN_MSG
                  name: docker-env
            - name: SWAGGER_DESCRIPTION
              valueFrom:
                configMapKeyRef:
                  key: SWAGGER_DESCRIPTION
                  name: docker-env
            - name: SWAGGER_ENABLE
              valueFrom:
                configMapKeyRef:
                  key: SWAGGER_ENABLE
                  name: docker-env
            - name: SWAGGER_PATH
              valueFrom:
                configMapKeyRef:
                  key: SWAGGER_PATH
                  name: docker-env
            - name: SWAGGER_TITLE
              valueFrom:
                configMapKeyRef:
                  key: SWAGGER_TITLE
                  name: docker-env
            - name: SWAGGER_VERSION
              valueFrom:
                configMapKeyRef:
                  key: SWAGGER_VERSION
                  name: docker-env
          image: mstoews/gloss-api-backend_nest-api:v1.8.6
          name: gloss-api-backend
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
