yaml/nest-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: nest-api
  name: nest-api
spec:
  ports:
    - name: "3010"
      port: 3010
      targetPort: 3000
  selector:
    io.kompose.service: nest-api
status:
  loadBalancer: {}
