yaml/gloss-api-backend_default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: gloss-api-backend_default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/gloss-api-backend_default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/gloss-api-backend_default: "true"
